learnk8s-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: learnk8s-test
  name: learnk8s-test
  namespace: learnk8s
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
    #nodePort: 80
  selector:
    app: learnk8s-test
  type: NodePort
status:
  loadBalancer: {}
