learnk8s-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learnk8s-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - #host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learnk8s-test
                port:
                  number: 4000
